adding hot spots

--- a/app/assets/javascripts/templates/home.hbs
+++ b/app/assets/javascripts/templates/home.hbs
@@ -16,37 +16,35 @@
 			</ul>
 		</div>
 	</div>
-	<div class="middle-slogan">find perfect venue</div>
+	<div class="middle-slogan strong upper">find perfect venue</div>
 	<div class="search-bar-container">
 		<div class = "row search-bar">
-			<input class="span3 wedding-date" placeholder="wedding date"/>
-			<input class="span3 wedding-area" placeholder="wedding destination"/>
-			<input class="span3 guest-count" placeholder="guest count"/>
-			<button class="span3 search-button">Search</button>
+			<input class="col-md-3 wedding-date" placeholder="wedding date"/>
+			<input class="col-md-3 wedding-area" placeholder="wedding destination"/>
+			<input class="col-md-3 guest-count" placeholder="guest count"/>
+			<button class="col-md-3 search-button">Search</button>
 		</div>
 	</div>
-	<div>
-		<div>
-			<span>popular places</span>
-		</div>
-		<div>
-			<div class="row">
-				<div class="span4"></div>
-				<div class="span8"></div>
+	<div class = "main-back-ground">
+		<div class ="main-title strong upper">popular wedding spot</div>
+		<div class="popular-spot-container">
+			<div class="row spot-row-container">
+				<div class="col-md-4">{{small-pop-dest}}</div>
+				<div class="col-md-4">{{small-pop-dest}}</div>
+				<div class="col-md-4">{{small-pop-dest}}</div>
 			</div>
-			<div class="row">
-				<div class="span4"></div>
-				<div class="span4"></div>
-				<div class="span4"></div>
+			<div class="row spot-row-container">
+				<div class="col-md-8">{{mid-pop-dest}}</div>
+				<div class="col-md-4">{{small-pop-dest}}</div>
 			</div>
-			<div class="row">
-				<div class="span8"></div>
-				<div class="span4"></div>
+			<div class="row spot-row-container">
+				<div class="col-md-4">{{small-pop-dest}}</div>
+				<div class="col-md-4">{{small-pop-dest}}</div>
+				<div class="col-md-4">{{small-pop-dest}}</div>
 			</div>
-			<div class="row">
-				<div class="span4"></div>
-				<div class="span4"></div>
-				<div class="span4"></div>
+			<div class="row spot-row-container">
+				<div class="col-md-4">{{small-pop-dest}}</div>
+				<div class="col-md-8">{{mid-pop-dest}}</div>
 			</div>
 		</div>
 	</div>
