--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,6 +1,20 @@
+
 .strong{
 	font-weight: bold;
 }
 .upper{
 	text-transform: uppercase;
+}
+$font-size: 14px;
+$line-height: 1.4;
+$lines-to-show: 4;
+.multi-line-text-box {
+	display: -webkit-box;
+	height: $font-size*$line-height*$lines-to-show;
+	font-size: $font-size;
+	line-height: $line-height;
+	-webkit-line-clamp: $lines-to-show;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
