--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,3 +1,14 @@
 <div>
+	<div class="navbar navbar-inverse">
+		<div class="navbar-header">
+			{{#link-to 'index' class='navbar-brand'}} Easiwed {{/link-to}}
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li>{{#link-to 'posts'}}Posts{{/link-to}}</li>
+				<li>{{#link-to 'about'}}About{{/link-to}}</li>
+			</ul>
+		</div>
+	</div>
 	{{outlet}}
 </div>
