--- a/app/assets/stylesheets/problem-list-item.scss
+++ b/app/assets/stylesheets/problem-list-item.scss
@@ -1,5 +1,6 @@
+@import "shared";
 .problem-list-item {
-	border-bottom: #909090 solid 1px;
+	border-bottom: $theme-secondary-color solid 1px;
 	padding: 5px;
 	height: 115px;
 	:hover {
@@ -10,9 +11,9 @@
 		border-radius: 5px;
 		height: 80px;
 		width: 80px;
-		background-color: #82B647;
-		color: #FFFFFF;
-		box-shadow: 3px 3px 5px #888888;
+		background-color: $theme-primary-color;
+		color: $white;
+		box-shadow: 3px 3px 5px $shadow;
 		.title{
 			text-align: center;
 			font-size: 13px;
@@ -33,20 +34,20 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 		width: 370px;
-		color: #555555
+		color: $dark-grey;
 	}
 	.problem-short-description{
 		margin-bottom: 8px;
-		color: #555555
+		color: $dark-grey;
 	}
 	.tag-item{
-		border: solid 1px #909090;
+		border: solid 1px $theme-secondary-color;
 		padding:4px 5px 4px 8px;
 		text-align: center;
 		border-radius: 5px;
-		background-color: #909090;
-		color: #FFFFFF;
-		box-shadow: 1px 1px 5px #888888;
+		background-color: $theme-secondary-color;
+		color: $white;
+		box-shadow: 1px 1px 5px $shadow;
 		margin: 0 -32px 7px;
 	}
 }
