--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -26,5 +26,6 @@ $lines-to-show: 4;
 $theme-primary-color: #82B647;
 $theme-secondary-color: #909090;
 $dark-grey: #555555;
+$light-grey: #DDDDDD;
 $shadow: #888888;
 $white: #FFFFFF;
